--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/DjLeChuck/foundryvtt-publish-package-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.1"
+  },
+  "volta": {
+    "node": "20.12.0"
   }
 }
